fix(link): fixed the CSS alignment for link list

--- a/src/app/components_ngrx/work-item-link/work-item-link.component.less
+++ b/src/app/components_ngrx/work-item-link/work-item-link.component.less
@@ -109,10 +109,8 @@
   }
 
   &__list {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 15px 0 15px 20px;
     &-header {
-      padding: 5px 40px;
       margin: 0;
       font-weight: 700;
     }
@@ -120,12 +118,11 @@
       list-style: none;
     }
     &-type-header {
-      padding: 0 40px;
       font-weight: 700;
       color: @color-pf-black-600;
     }
     &-item {
-      padding: 2px 50px;
+      padding: 2px 20px;
       padding-right: ((@grid-gutter-width/3)*2);
       -webkit-transition: background-color 1s; /* For Safari 3.1 to 6.0 */
       transition: background-color 1s;
